# csv-deta

./: LICENSE  Pipfile  README.md  README.pypi.md  example.csv  setup.cfg
src/: cli.py  detacsv.py
