[metadata]
name = csv_deta
version = attr:src.cli.__version__
description = Lightweight tool to upload and download CSV data files into\from Deta Base
long_description = file:README.pypi.md
long_description_content_type = text/markdown
author = JL Connor
#author_email = 
license = Apache Software License 2.0
license_files = LICENSE
#url = 

keywords =
	csv
	db
	database
	deta
	cli
	detabase
	upload
	download
	backup

classifiers =
	Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    License :: Freeware
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

#project_urls =
#    Source Code = 
#    Bug Tracker = 

[options]
packages = src
python_requires = >=3
#install_requires = requirements.txt
install_requires = 
	deta
	fire
setup_requires =
	wheel
py_modules =

[options.entry_points]
console_scripts =
	csv-deta=src.cli:main
    
